alignment fix

--- a/frontend/src/components/WelcomeScreen.css
+++ b/frontend/src/components/WelcomeScreen.css
@@ -2,7 +2,8 @@
   padding: 40px 0;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .btn-view-form {
